[package]
name = "list-any"
version = "0.2.0"
edition = "2018"
description = "Type erased slices and Vecs"
homepage = "https://github.com/geeklint/list-any"
repository = "https://github.com/geeklint/list-any"
readme = "README.md"
keywords = ["any", "list-any", "collections"]
license = "Apache-2.0 OR MIT OR Zlib"

[features]
default = ["alloc"]
alloc = []

[dependencies]
